--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         node: [ 14, 16 ]
-    name: Build Node v${{ matrix.node }} - ${{ matrix.dir }}:service
+    name: Build Node v${{ matrix.node }} - secret-box:service
     steps:
       - uses: actions/checkout@v3
         with:
