--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,14 +1,14 @@
 name = "secret-box"
 main = "src/index.ts"
-account_id = "99b9572de9d3c33774965949416b82c9"
+account_id = ""
 workers_dev = true
 compatibility_date = "2022-04-14"
-
-node_compat = true
 
 kv_namespaces = [
 	{ binding = "CREDENTIALS", preview_id = "08f012b41df44fd3b6849100d02b7cba", id = "08f012b41df44fd3b6849100d02b7cba" }
 ]
+
+node_compat = true
 
 [miniflare]
 env_path=".env"
