--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Cloudflare worker TypeScript template",
   "main": "dist/worker.js",
+  "type": "module",
   "scripts": {
     "build": "webpack",
     "miniflare": "webpack && miniflare dist/worker.js",
