Added correct workflow path

--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -25,6 +25,7 @@ jobs:
 
   call-deploy:
     name: "Deploy"
+    needs: call-build
     uses: ./.github/workflows/deploy.yml
     secrets: inherit
 
