--- a/wrangler.toml
+++ b/wrangler.toml
@@ -8,7 +8,7 @@ kv_namespaces = [
 	{ binding = "CREDENTIALS", preview_id = "08f012b41df44fd3b6849100d02b7cba", id = "08f012b41df44fd3b6849100d02b7cba" }
 ]
 
-node_compat = true
+node_compat = false
 
 [miniflare]
 env_path=".env"
