--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@lum-network/sdk-javascript": "^0.7.6",
     "browserify-fs": "^1.0.0",
     "buffer": "6.0.3",
+    "cosmjs-types": "^0.5.0",
     "crypto-browserify": "3.12.0",
     "itty-router": "^2.6.1",
     "multibase": "4.0.6",
@@ -69,6 +70,7 @@
     "path-browserify": "1.0.1",
     "process": "^0.11.10",
     "stream-browserify": "3.0.0",
+    "tiny-secp256k1": "^2.2.1",
     "util": "^0.12.4"
   },
   "publishConfig": {
