--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,7 @@ defaults:
     shell: bash
 
 jobs:
+  
   staging-deploy:
     name: "Cloudflare - Staging"
     runs-on: ubuntu-latest
@@ -18,16 +19,17 @@ jobs:
       
       - uses: actions/setup-node@v3
         with:
-          node-version: '16.x'
+          node-version: 16
           cache: 'npm'
+          cache-dependency-path: '**/package-lock.json'
 
       - name: Publish to Cloudflare
         uses: cloudflare/wrangler-action@2.0.0
         with:
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          wranglerVersion: '2.0.7'
-          preCommands: npm install
+          wranglerVersion: '2.0.27'
+          preCommands: npm ci
           command: publish --env staging
 
   production-deploy:
@@ -48,14 +50,15 @@ jobs:
       
       - uses: actions/setup-node@v3
         with:
-          node-version: '16.x'
+          node-version: 16
           cache: 'npm'
+          cache-dependency-path: '**/package-lock.json'
 
       - name: Publish to Cloudflare
         uses: cloudflare/wrangler-action@2.0.0
         with:
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          wranglerVersion: '2.0.6'
-          preCommands: npm install
+          wranglerVersion: '2.0.27'
+          preCommands: npm ci
           command: publish
