--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -4,36 +4,26 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
-
 jobs:
-
+  
   call-lint:
     name: "Lint"
     uses: ./.github/workflows/lint.yml
 
   call-build:
-    name: "Build"
+    name: "Build & Test"
     needs: call-lint
     uses: ./.github/workflows/build.yml
 
-  # call-test:
-  #   name: "Test"
-  #   needs: call-build
-  #   uses: ./.github/workflows/test.yml
-  #   with:
-  #     VERSION: ${{ needs.call-build.outputs.VERSION }}
+  call-release:
+    name: "Release"
+    needs: call-build
+    if: ${{ github.ref_protected == true }}
+    uses: ./.github/workflows/release.yml
+    secrets: inherit
 
   call-deploy:
     name: "Deploy"
     needs: call-build
     uses: ./.github/workflows/deploy.yml
     secrets: inherit
-
-  # call-release:
-  #   name: "Release"
-  #   needs: [call-test, call-build]
-  #   if: ${{ github.ref_protected == true }}
-  #   uses: ./.github/workflows/release.yml
-  #   with:
-  #     RELEASE_VERSION: ${{ needs.call-build.outputs.VERSION }}
-  #   secrets: inherit
