--- a/package.json
+++ b/package.json
@@ -28,31 +28,31 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.14.1",
-    "@types/jest": "^27.5.2",
-    "@types/service-worker-mock": "^2.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-config-typescript": "^3.0.0",
-    "jest": "^27.5.1",
-    "miniflare": "^2.7.1",
-    "prettier": "^2.7.1",
-    "service-worker-mock": "^2.0.5",
-    "terser-webpack-plugin": "^5.3.5",
-    "ts-jest": "^27.1.5",
-    "ts-loader": "^9.3.1",
-    "typescript": "^4.7.4",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/commit-analyzer": "^9.0.2",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^8.0.5",
     "@semantic-release/npm": "^9.0.1",
     "@semantic-release/release-notes-generator": "^10.0.3",
+    "@types/jest": "^27.5.2",
+    "@types/service-worker-mock": "^2.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
     "conventional-changelog-conventionalcommits": "^5.0.0",
-    "semantic-release": "^19.0.4"
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-typescript": "^3.0.0",
+    "jest": "^27.5.1",
+    "miniflare": "^2.7.1",
+    "prettier": "^2.7.1",
+    "semantic-release": "^19.0.5",
+    "service-worker-mock": "^2.0.5",
+    "terser-webpack-plugin": "^5.3.5",
+    "ts-jest": "^27.1.5",
+    "ts-loader": "^9.3.1",
+    "typescript": "^4.7.4",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   },
   "dependencies": {
     "@cosmjs/amino": "^0.28.4",
