build(workflows): Add standard release, CodeQL, build, and deploy workflows (#4)
* Update .gitignore

* Initialise standard files

* Delete .hadolint.yml

* Create dependabot.yml

* Update package.json

* Update deploy.yml

* Update lint.yml

* Create codeql.yml

* Change build to build and test

* Create release.yml

* Call release from dispatch

* Update package lock

* Bump package lock versions

* npm dedupe

* Update package.json

* Add semantic release packages

* Update build.yml

* Update wrangler.toml

* Change route

* Update package-lock.json

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,6 @@
-name: 'Build'
+name: "Build & Test"
 on:
   workflow_call:
-
 defaults:
   run:
     shell: bash
@@ -9,21 +8,23 @@ defaults:
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node: [ 14, 16 ]
-    name: Build Node v${{ matrix.node }} - secret-box:service
+    
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-
+      
       - uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node }}
+          node-version: 16
           cache: 'npm'
+          cache-dependency-path: '**/package-lock.json'
 
-      - name: NPM build
+      - name: "Execute build"
         run: |
-          npm install
+          npm ci
           npm run build
+      
+      # Temporarily disabling tests until the workflow setup is sorted. Please reactivate when ready.
+      # - name: "Execute tests"
+      #   run: npm test
