--- a/package.json
+++ b/package.json
@@ -1,7 +1,14 @@
 {
-  "name": "worker-typescript-template",
+  "name": "@cheqd/secret-box-service",
   "version": "1.0.0",
-  "description": "Cloudflare worker TypeScript template",
+  "license": "Apache-2.0",
+  "source": "src/index.ts",
+  "author": "Cheqd Foundation Limited (https://github.com/cheqd)",
+  "repository": "https://github.com/cheqd/secret-box-service.git",
+  "bugs": {
+    "url": "https://github.com/cheqd/secret-box-service/issues"
+  },
+  "homepage": "https://github.com/cheqd/secret-box-service#readme",
   "main": "dist/worker.js",
   "type": "module",
   "scripts": {
@@ -12,8 +19,6 @@
     "test": "jest --config jestconfig.json --verbose",
     "analyze": "webpack --json > stats.json && webpack-bundle-analyzer stats.json"
   },
-  "author": "author",
-  "license": "MIT OR Apache-2.0",
   "eslintConfig": {
     "root": true,
     "extends": [
@@ -22,31 +27,39 @@
     ]
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^3.11.0",
-    "@types/jest": "^26.0.24",
+    "@cloudflare/workers-types": "^3.14.1",
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/commit-analyzer": "^9.0.2",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^8.0.5",
+    "@semantic-release/npm": "^9.0.1",
+    "@semantic-release/release-notes-generator": "^10.0.3",
+    "@types/jest": "^27.5.2",
     "@types/service-worker-mock": "^2.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.16.1",
-    "@typescript-eslint/parser": "^4.16.1",
-    "eslint": "^7.21.0",
-    "eslint-config-prettier": "^8.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "conventional-changelog-conventionalcommits": "^5.0.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-config-typescript": "^3.0.0",
-    "jest": "^27.0.1",
-    "miniflare": "^2.4.0",
-    "prettier": "^2.3.0",
+    "jest": "^27.5.1",
+    "miniflare": "^2.7.1",
+    "prettier": "^2.7.1",
+    "semantic-release": "^19.0.5",
     "service-worker-mock": "^2.0.5",
-    "terser-webpack-plugin": "^5.3.1",
-    "ts-jest": "^27.0.1",
-    "ts-loader": "^9.2.2",
-    "typescript": "^4.3.2",
-    "webpack": "^5.38.1",
-    "webpack-cli": "^4.7.0"
+    "terser-webpack-plugin": "^5.3.5",
+    "ts-jest": "^27.1.5",
+    "ts-loader": "^9.3.1",
+    "typescript": "^4.7.4",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   },
   "dependencies": {
     "@cosmjs/amino": "^0.28.4",
     "@cosmjs/encoding": "^0.28.4",
     "@cosmjs/proto-signing": "^0.28.4",
-    "@cosmjs/stargate": "^0.28.4",
-    "@lum-network/sdk-javascript": "^0.7.3",
+    "@cosmjs/stargate": "^0.28.13",
+    "@lum-network/sdk-javascript": "^0.7.6",
     "browserify-fs": "^1.0.0",
     "buffer": "6.0.3",
     "crypto-browserify": "3.12.0",
@@ -57,5 +70,9 @@
     "process": "^0.11.10",
     "stream-browserify": "3.0.0",
     "util": "^0.12.4"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/",
+    "access": "public"
   }
 }
