--- a/package.json
+++ b/package.json
@@ -59,10 +59,10 @@
     "@cosmjs/encoding": "^0.28.4",
     "@cosmjs/proto-signing": "^0.28.4",
     "@cosmjs/stargate": "^0.28.4",
-    "browserify-fs": "^1.0.0",
-    "buffer": "6.0.3",
-    "cosmjs-types": "^0.5.0",
-    "crypto-browserify": "3.12.0",
+    "@cosmjs/crypto": "^0.28.4",
+    "@cosmjs/math": "^0.28.4",
+    "@cosmjs/tendermint-rpc": "^0.28.4",
+    "cosmjs-types": "^0.4.0",
     "itty-router": "^2.6.1",
     "multibase": "4.0.6",
     "multicodec": "3.2.1",
