--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,8 +37,8 @@ jobs:
     needs: staging-deploy
     if: ${{ success() && ( github.ref_name == 'main' ) }}
     runs-on: ubuntu-latest
-    permissions:
-      security-events: write
+    # permissions:
+    #   security-events: write # Lets reassess this later
     environment:
       name: production
       url: https://secret-box.cheqd.net/
