--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "prettier": "^2.3.0",
     "service-worker-mock": "^2.0.5",
     "terser-webpack-plugin": "^5.3.1",
-    "ts-jest": "next",
+    "ts-jest": "29.0.0-next.1",
     "ts-loader": "^9.2.2",
     "typescript": "^4.3.2",
     "webpack": "^5.38.1",
