--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,8 @@
 name: "Deploy"
 on:
   workflow_call:
-concurrency: 
-  group: ${{ github.workflow }}
+# concurrency: 
+#   group: ${{ github.workflow }}
 defaults:
   run:
     shell: bash
