--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -26,4 +26,7 @@ jobs:
     name: "Deploy"
     needs: call-build
     uses: ./.github/workflows/deploy.yml
+    concurrency: 
+      group: ${{ github.workflow }}
+      cancel-in-progress: false
     secrets: inherit
