--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,7 @@ defaults:
     shell: bash
 
 jobs:
-  release:
+  release-npm:
     name: "Semantic Release"
     runs-on: ubuntu-latest
     
@@ -40,3 +40,29 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+  
+  production-deploy:
+    name: "Production Deploy"
+    runs-on: ubuntu-latest
+    if: ${{ github.ref_name == 'main' }}
+    environment:
+      name: production
+      url: https://secret-box.cheqd.net/
+
+    steps:
+      - uses: actions/checkout@v3
+      
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          cache: 'npm'
+          cache-dependency-path: '**/package-lock.json'
+
+      - name: Publish to Cloudflare
+        uses: cloudflare/wrangler-action@2.0.0
+        with:
+          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          wranglerVersion: '2.0.27'
+          preCommands: npm ci
+          command: publish
