--- a/wrangler.toml
+++ b/wrangler.toml
@@ -38,7 +38,7 @@ route = { pattern = "secret-box.cheqd.net/*", zone_id = "88e06eefedbbd140a12ac3d
 # Details: https://developers.cloudflare.com/workers/learning/how-kv-works
 # @default `[]`
 kv_namespaces = [
-	{ binding = "CREDENTIALS", preview_id = "82eb8b0a55244170b817d3f5656bea56", id = "82eb8b0a55244170b817d3f5656bea56" }
+	{ binding = "CREDENTIALS", id = "82eb8b0a55244170b817d3f5656bea56" }
 ]
 
 # Map of environment variables to set when deploying the Worker
@@ -86,7 +86,7 @@ route = { pattern = "secret-box-staging.cheqd.net/*", zone_id = "88e06eefedbbd14
 # Details: https://developers.cloudflare.com/workers/learning/how-kv-works
 # @default `[]`
 kv_namespaces = [
-	{ binding = "CREDENTIALS", preview_id = "9abeb647d36148009a0896797775bfbf", id = "9abeb647d36148009a0896797775bfbf" }
+	{ binding = "CREDENTIALS", id = "9abeb647d36148009a0896797775bfbf" }
 ]
 
 
