--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,6 +13,7 @@ updates:
 
   # Maintain dependencies for NPM
   - package-ecosystem: "npm"
+    target-branch: "develop"
     directory: "/"
     schedule:
       interval: "weekly"
