--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -4,6 +4,7 @@ on:
     branches:
       - main
       - develop
+      - release/**
     types:
       - opened
       - reopened
@@ -23,7 +24,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - uses: amannn/action-semantic-pull-request@v5.0.2
+      - uses: amannn/action-semantic-pull-request@v5.1.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
