--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -20,12 +20,14 @@ updates:
 
   # Maintain dependencies for Docker
   - package-ecosystem: "docker"
+    target-branch: "develop"
     directory: "/"
     schedule:
       interval: "weekly"
 
   # Maintain dependencies for Golang
   - package-ecosystem: "gomod"
+    target-branch: "develop"
     directory: "/"
     schedule:
       interval: "weekly"
@@ -38,6 +40,13 @@ updates:
 
   # Maintain dependencies for Python
   - package-ecosystem: "pip"
+    directory: "/"
+    schedule:
+      interval: "weekly"
+
+  # Maintain dependencies for Kotlin
+  - package-ecosystem: "gradle"
+    target-branch: "develop"
     directory: "/"
     schedule:
       interval: "weekly"
