--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -12,18 +12,17 @@ jobs:
 
   call-build:
     name: "Build & Test"
-    needs: call-lint
     uses: ./.github/workflows/build.yml
 
   call-deploy:
     name: "Deploy"
-    needs: call-build
+    needs: [ call-lint, call-build ]
     uses: ./.github/workflows/deploy.yml
     secrets: inherit
 
   call-release:
     name: "Release"
-    needs: call-build
+    needs: [ call-lint, call-build ]
     if: ${{ github.ref_protected == true }}
     uses: ./.github/workflows/release.yml
     secrets: inherit
